--- a/src/components/layout/form/FormEmail.module.css
+++ b/src/components/layout/form/FormEmail.module.css
@@ -1,19 +1,17 @@
 
-.login {
+/*.login {
     width: 100%;
   max-width: 400px;
   margin: 16px auto;
   font-size: 16px;
 }
 
-/* Reset top and bottom margins from certain elements */
 .login-header,
 .login p {
   margin-top: 0;
   margin-bottom: 0;
 }
 
-/* The triangle form is achieved by a CSS hack */
 .login-triangle {
   width: 0;
   margin-right: auto;
@@ -37,7 +35,6 @@
   padding: 12px;
 }
 
-/* Every row inside .login-container is defined with p tags */
 .login p {
   padding: 12px;
 }
@@ -86,7 +83,7 @@
   color: rgb(252, 250, 252);
 }
 
-/* Text fields' focus effect */
+
 .login input:focus,
 .login textarea:focus {
   border-color: #888;
@@ -103,7 +100,115 @@
   background: rgba(194, 13, 179, 0.575);
 }
 
-/* Buttons' focus effect */
+
 .login button:focus {
   border-color: rgb(116, 0, 170);
+}
+*/
+
+.formStyle{
+  width: 100%;
+  
+}
+.form-group{
+  width: 100%;
+  margin-bottom: 2rem;
+}
+
+label{
+  width: 100%;
+  margin-bottom: 2rem;
+}
+
+input,textarea{
+  width: 100%;
+  font-size: 2rem;
+  padding: 1.2rem;
+  color: #BCB4B4;
+  background-color: #1E1E1E;
+  outline: none;
+  border: none;
+  border-radius: 8px;
+  margin-top: 1rem;
+  height: 50px;
+}
+
+textarea {
+  min-height: 250px;
+  resize: vertical;
+  background-color: #1E1E1E;
+}
+button[type='submit'] {
+  background-color: #BCB4B4;
+  color: black;
+  font-size: 2rem;
+  display: inline-block;
+  outline: none;
+  border: none;
+  padding: 1rem 4rem;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+/* FormSection*/
+
+.ContactSectionStyle{
+  padding: 1rem 0;
+  
+}
+
+.contactSection__wrapper {
+  display: flex;
+  gap: 5rem;
+  margin-top: 7rem;
+  justify-content: space-between;
+  position: relative;
+}
+
+.contactSection__wrapper::after {
+  position: absolute;
+  content: '';
+  width: 2px;
+  height: 60%;
+  background-color: gray;
+  left: 50%;
+  top: 30%;
+  transform: translate(-50%, -50%);
+}
+.left {
+  width: 100%;
+  max-width: 500px;
+}
+.right {
+  max-width: 500px;
+  width: 100%;
+  border-radius: 12px;
+  /* padding-left: 3rem; */
+}
+@media only screen and (max-width: 768px) {
+  .contactSection__wrapper {
+    flex-direction: column;
+  }
+  .contactSection__wrapper::after {
+    display: none;
+  }
+  .left,
+  .right {
+    max-width: 100%;
+  }
+  .right {
+    padding: 4rem 2rem 2rem 2rem;
+  }
+}
+
+.h2{
+  font-family: Roboto;
+  
+}
+
+.title{
+  font-family: "Montserrat Bold" , Bold;
+  font-size: 3rem;
+  margin-top: 0.5rem;
+  text-transform: uppercase;
 }
